add client login page

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,10 @@
 
 
 
+
+
+
+
 </head>
 
 <body class="mat-typography">
@@ -50,6 +54,8 @@
 <script src="assets/js/scrolling-nav.js"></script>
 <script src="assets/js/slick.min.js"></script>
 <script src="assets/js/main.js"></script>
+<script src="assets/clientSignIn/main.js"></script>
+<script src="assets/clientSignIn/wow.min.js"></script>
 <script >
   $('.js-tilt').tilt({
     scale: 1.1
