--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
   <link rel="stylesheet" href="assets/css/default.css">
   <!--====== Style css ======-->
   <link rel="stylesheet" href="assets/css/style.css">
+
+
+
   <link rel="stylesheet" type="text/css" href="assets/AssessmentTakerlogin/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="assets/AssessmentTakerlogin/vendor/animate/animate.css">
   <link rel="stylesheet" type="text/css" href="assets/AssessmentTakerlogin/vendor/css-hamburgers/hamburgers.min.css">
@@ -43,8 +46,15 @@
 </head>
 
 <body class="mat-typography">
+<div class="preloader">
+  <div class="preloader-inner">
+    <div class="preloader-icon">
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+</div>
 <app-root></app-root>
-
 <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
 <script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
@@ -55,12 +65,7 @@
 <script src="assets/js/slick.min.js"></script>
 <script src="assets/js/main.js"></script>
 <script src="assets/clientSignIn/main.js"></script>
-<script src="assets/clientSignIn/wow.min.js"></script>
-<script >
-  $('.js-tilt').tilt({
-    scale: 1.1
-  })
-</script>
+
 
 </body>
 </html>
