--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,11 @@
   <link rel="stylesheet" type="text/css" href="assets/AssessmentTakerlogin/css/main.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!--================================Dashboard css ==================================================-->
+
+  <link rel="stylesheet" type="text/css" href="assets/dashboard/fonts/line-icons.css">
+
+  <link rel="stylesheet" href="assets/dashboard/plugins/morris/morris.css">
+  <link rel="stylesheet" type="text/css" href="assets/dashboard/css/responsive.css">
   <!--================================client Sign in css ==================================================-->
 
 
@@ -65,6 +70,15 @@
 <script src="assets/js/slick.min.js"></script>
 <script src="assets/js/main.js"></script>
 <script src="assets/clientSignIn/main.js"></script>
+<!--======================== Dashboard Js =======================-->
+<script src="assets/dashboard/js/popper.min.js"></script>
+<script src="assets/dashboard/js/bootstrap.min.js"></script>
+<script src="assets/dashboard/js/jquery.app.js"></script>
+<script src="assets/dashboard/js/main.js"></script>
+
+<script src="assets/dashboard/plugins/morris/morris.min.js"></script>
+<script src="assets/dashboard/plugins/raphael/raphael-min.js"></script>
+<script src="assets/dashboard/js/dashborad1.js"></script>
 
 
 </body>
